--- a/UserInterface/Assets/Images/NegativeTestResult.xaml
+++ b/UserInterface/Assets/Images/NegativeTestResult.xaml
@@ -56,13 +56,13 @@
                         <DrawingGroup Transform="1,0,0,1,-205,-193.89598">
                             <GeometryDrawing Brush="#FF2F2E41" Geometry="F1 M790,512.20805z M0,0z M800.57267,320.98789C800.21825,315.54344 793.34961,315.35689 787.89389,315.30534 782.43817,315.25379 775.91553,315.44855 772.82849,310.94991 770.78839,307.97691 771.17807,303.84959 772.86349,300.66212 774.54891,297.47465 777.32121,295.02312 780.04857,292.6647 787.08996,286.57586 794.34699,280.53534 802.80077,276.63808 811.25455,272.74082 821.16122,271.16608 829.92865,274.29458 840.69873,278.13765 855.25792,297.92046 856.51515,309.28634 857.77238,320.65222 853.23008,332.23886 845.57325,340.7322 837.91642,349.22554 820.39137,345.7987 809.36256,348.8202 816.06746,339.33056 811.64797,322.08762 800.90684,317.6562z" />
                         </DrawingGroup>
-                        <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                        <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                             <GeometryDrawing.Geometry>
                                 <EllipseGeometry RadiusX="62.9893" RadiusY="62.9893" Center="361.7217,403.5046" />
                             </GeometryDrawing.Geometry>
                         </GeometryDrawing>
                         <DrawingGroup Transform="1,0,0,1,-205,-193.89598">
-                            <GeometryDrawing Brush="{StaticResource SecondaryColor}" Geometry="F1 M790,512.20805z M0,0z M524.65625,529.9355A45.15919,45.15919,0,0,1,483.40088,503.14936L383.44873,278.05757A59.83039,59.83039,0,1,1,495.31885,236.19331L567.69629,471.60542A45.07978,45.07978,0,0,1,524.65629,529.9355z" />
+                            <GeometryDrawing Brush="{DynamicResource SecondaryColor}" Geometry="F1 M790,512.20805z M0,0z M524.65625,529.9355A45.15919,45.15919,0,0,1,483.40088,503.14936L383.44873,278.05757A59.83039,59.83039,0,1,1,495.31885,236.19331L567.69629,471.60542A45.07978,45.07978,0,0,1,524.65629,529.9355z" />
                         </DrawingGroup>
                     </DrawingGroup>
                 </DrawingImage.Drawing>
