--- a/UserInterface/Views/Test/TestAudiometryQuestionView.xaml
+++ b/UserInterface/Views/Test/TestAudiometryQuestionView.xaml
@@ -27,7 +27,7 @@
                          Height="30" 
                          Name="ProgressBar" 
                          Background="{StaticResource PrimaryBackgroundColor}" 
-                         Foreground="{StaticResource SecondaryColor}" 
+                         Foreground="{DynamicResource SecondaryColor}" 
                          Value="{Binding ProgressValue, Mode=OneWay}">
             </ProgressBar>
 
