--- a/UserInterface/Assets/Images/Home.xaml
+++ b/UserInterface/Assets/Images/Home.xaml
@@ -70,7 +70,7 @@
                                 <PathGeometry Figures="M 274.505 96.188 c -18.15 0.46997 -31.69 5.81 -40.27 15.85 c -3.16998 3.72003 -4.46002 6.65002 -5.82001 9.75 c -1.34998 3.06 -2.72998 6.21002 -5.94 10.32 v -3.40002 c 1.98999 -2.91998 3.06 -5.35999 4.10999 -7.72998 c 1.42004 -3.23999 2.77002 -6.29999 6.13 -10.23 c 8.96002 -10.5 23 -16.07 41.73 -16.56 l 0.06006 2 Z" FillRule="Nonzero"/>
                             </GeometryDrawing.Geometry>
                         </GeometryDrawing>
-                        <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                        <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                             <GeometryDrawing.Geometry>
                                 <PathGeometry Figures="M 228.415 121.788 c -1.34998 3.06 -2.72998 6.21002 -5.94 10.32 c -0.38 0.48999 -0.78998 1 -1.22998 1.53003 c -11.58 13.77 -27.05 18.29 -39.49 21.93 c -0.78003 0.22998 -1.54004 0.44 -2.28003 0.63995 c -11.06 3 -17.12 2.89001 -21.63 2.82001 c -4.52997 -0.07996 -7.52002 -0.13 -12.87 2.92999 c -9.81 5.59003 -13.83 13.77 -17.72 21.6801 c -4.01001 8.13995 -7.79004 15.83 -17.4301 19.44 c -6.69 2.5 -11.39 1.25995 -16.36 -0.04004 c -4.27002 -1.13 -11.9658 -28.944 -18.78 -33 c -14.07 2.95001 -22.62 48.93 -33.29 73.55 l -1.83997 -0.79999 c 10.95 -25.24 19.97 -71.61 34.71 -74.71 c 6.57001 -1.38 15.22 31.84 19.71 33.02 c 4.65997 1.23004 9.04999 2.38 15.15 0.10004 c 8.89996 -3.32001 12.34 -10.33 16.33 -18.44 c 3.84003 -7.80005 8.19 -16.64 18.52 -22.54 c 5.83002 -3.32996 9.21997 -3.26996 13.9 -3.19 c 4.45996 0.08002 10.48 0.17999 21.6 -2.88995 c 0.56 -0.16003 1.13 -0.32001 1.71997 -0.49005 c 12.18 -3.56 27.33 -7.98999 38.51 -21.29 c 1.10004 -1.31 2.01001 -2.52002 2.77002 -3.65002 c 1.98999 -2.91998 3.06 -5.35999 4.10999 -7.72998 c 1.42004 -3.23999 3.19 -2.28998 1.83002 0.81 Z" FillRule="Nonzero"/>
                             </GeometryDrawing.Geometry>
@@ -81,7 +81,7 @@
                                     <PathGeometry Figures="M 121.776 350.568 c -0.7916 -2.75646 -2.14717 -5.10758 -3.76107 -6.78474 l -5.86366 -26.7299 l -12.7812 3.13108 l 7.32422 26.7777 c -0.48165 2.2656 -0.38528 4.9703 0.40632 7.72676 c 1.8084 6.29712 6.55959 10.4794 10.6121 9.34144 c 4.0525 -1.13796 5.87168 -7.16522 4.06328 -13.4623 h 0 Z" FillRule="Nonzero"/>
                                 </GeometryDrawing.Geometry>
                             </GeometryDrawing>
-                            <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                            <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                                 <GeometryDrawing.Geometry>
                                     <PathGeometry Figures="M 120.008 175.227 s -20.1843 -0.41334 -25.3166 14.2855 c -4.67151 13.3789 -10.2094 50.1355 -7.2157 52.2594 l 12.7427 90.4854 l 18.1708 -2.49685 l -4.66349 -108.569 l 6.28234 -45.9645 Z" FillRule="Nonzero"/>
                                 </GeometryDrawing.Geometry>
@@ -92,7 +92,7 @@
                                 <PathGeometry Figures="M 213.475 343.188 L 209.895 438.188 L 162.395 438.188 L 160.475 395.618 L 152.035 438.188 L 101.125 438.188 L 107.475 365.008 L 114.035 349.618 L 118.475 339.188 L 213.475 343.188 Z"/>
                             </GeometryDrawing.Geometry>
                         </GeometryDrawing>
-                        <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                        <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                             <GeometryDrawing.Geometry>
                                 <PathGeometry Figures="M 175.475 157.188 l -33 -2 l -11 14 l -24 9 l 11 107 l -5 64 s 70 56 100 -6 l -8 -75 l 2 -87 l -23 -10 l -9 -14 Z" FillRule="Nonzero"/>
                             </GeometryDrawing.Geometry>
@@ -103,7 +103,7 @@
                                     <PathGeometry Figures="M 239.006 132.849 c 0.35806 3.46696 -0.09662 6.72734 -1.14365 9.34143 l 5.49713 32.8119 l -15.6897 2.15901 l -3.88701 -33.5168 c -1.55922 -2.34493 -2.67064 -5.44357 -3.02869 -8.91052 c -0.81798 -7.92025 2.60476 -14.7628 7.64491 -15.2833 c 5.04015 -0.52052 9.78906 5.47809 10.607 13.3983 v 2e-05 Z" FillRule="Nonzero"/>
                                 </GeometryDrawing.Geometry>
                             </GeometryDrawing>
-                            <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                            <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                                 <GeometryDrawing.Geometry>
                                     <PathGeometry Figures="M 211.677 184.945 c -5.40875 -9.24477 -18.8255 -10.1163 -24.8347 -1.25004 c -1.64275 2.4238 -1.1851 5.14828 -1.57731 8.42166 c -1.66507 13.8964 24.9644 54.9599 43.3903 59.688 c 2.41791 0.62042 3.79531 3.22857 6.23577 3.7531 h 2e-05 c 7.22956 1.55386 13.9607 -4.18446 13.5705 -11.5688 l -5.00511 -94.708 l -21.0272 7.17204 l 1.34587 49.1705 l -12.0981 -20.6784 Z" FillRule="Nonzero"/>
                                 </GeometryDrawing.Geometry>
@@ -166,7 +166,7 @@
                             </GeometryDrawing>
                         </DrawingGroup>
                         <DrawingGroup>
-                            <GeometryDrawing Brush="{StaticResource SecondaryColor}">
+                            <GeometryDrawing Brush="{DynamicResource SecondaryColor}">
                                 <GeometryDrawing.Geometry>
                                     <EllipseGeometry RadiusX="12.46328" RadiusY="12.20069" Center="12.46328,12.52176"/>
                                 </GeometryDrawing.Geometry>
