--- a/UserInterface/Assets/Styling/ButtonStyles.xaml
+++ b/UserInterface/Assets/Styling/ButtonStyles.xaml
@@ -6,7 +6,7 @@
         <Setter Property="FontSize" Value="32"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
         <Setter Property="Cursor" Value="Hand"/>
-        <Setter Property="Background" Value="{StaticResource SecondaryColor}" />
+        <Setter Property="Background" Value="{DynamicResource SecondaryColor}" />
         <Setter Property="Foreground" Value="{StaticResource PrimaryBackgroundColor}" />
         <Setter Property="Template">
             <Setter.Value>
@@ -14,13 +14,13 @@
                     <Border 
                         x:Name="Border" 
                         Height="70"
-                        Background="{StaticResource SecondaryColor}" 
+                        Background="{DynamicResource SecondaryColor}" 
                         CornerRadius="35">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource SecondaryColor_Highlight}" TargetName="Border"/>
+                            <Setter Property="Background" Value="{DynamicResource SecondaryColor_Highlight}" TargetName="Border"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Background" Value="{StaticResource SecondaryBackgroundColor}" TargetName="Border"/>
@@ -110,14 +110,14 @@
 
     <Style x:Key="SecondaryButton" BasedOn="{StaticResource PrimaryButton}" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{x:Null}" />
-        <Setter Property="Foreground" Value="{StaticResource SecondaryColor}" />
+        <Setter Property="Foreground" Value="{DynamicResource SecondaryColor}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border 
                         x:Name="Border" 
                         Height="70"
-                        BorderBrush="{StaticResource SecondaryColor}"
+                        BorderBrush="{DynamicResource SecondaryColor}"
                         Background="{StaticResource PrimaryBackgroundColor}" 
                         BorderThickness="4" 
                         CornerRadius="35">
@@ -125,7 +125,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{StaticResource SecondaryColor}" TargetName="Border"/>
+                            <Setter Property="Background" Value="{DynamicResource SecondaryColor}" TargetName="Border"/>
                             <Setter Property="Foreground" Value="{StaticResource PrimaryBackgroundColor}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
@@ -140,9 +140,6 @@
     <Style x:Key="ButtonWarning_M" BasedOn="{StaticResource ButtonWarning}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="420" />
     </Style>
-
-    
-
 
     <Style x:Key="SecondaryButton_Icon" BasedOn="{StaticResource SecondaryButton}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="70" />
