--- a/UserInterface/Assets/Styling/TextStyles.xaml
+++ b/UserInterface/Assets/Styling/TextStyles.xaml
@@ -14,7 +14,7 @@
     <Style x:Key="SubHeader" BasedOn="{StaticResource Text}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="40"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="Foreground" Value="{StaticResource SecondaryColor}"/>
+        <Setter Property="Foreground" Value="{DynamicResource SecondaryColor}"/>
     </Style>
 
     <Style x:Key="Header" BasedOn="{StaticResource Text}" TargetType="{x:Type TextBlock}">
