--- a/UserInterface/Views/Modals/AudioQuestionModal.xaml
+++ b/UserInterface/Views/Modals/AudioQuestionModal.xaml
@@ -19,7 +19,7 @@
 
             <TextBlock Grid.Column="0"  Style="{StaticResource Text}" VerticalAlignment="Center" Text="Frequentie" Height="58" Width="auto"/>
             <ComboBox Style="{StaticResource ComboBoxStyle}"
-                      Width="320" Height="70" ToolTip="Het aantal hertz moet tussen 125 en 8000 vallen."
+                      Width="320" Height="70"
                       Grid.Row="0" Grid.Column="1" Margin="62,0,-12,0"
                       SelectedValue="{Binding SelectedFrequency, Mode=TwoWay}"
                       SelectedValuePath="Content">
