--- a/UserInterface/Views/TargetAudienceOverviewView.xaml
+++ b/UserInterface/Views/TargetAudienceOverviewView.xaml
@@ -80,7 +80,7 @@
                                         <Button 
                             Style="{StaticResource SecondaryButton_Icon}"
                             Command="{Binding DataContext.UpdateCommand, RelativeSource={RelativeSource AncestorType={x:Type local:TargetAudienceOverviewView}}}"
-                            CommandParameter="{Binding}">
+                            CommandParameter="{Binding Id}">
                                             <Button.Content>
                                                 <Image Source="{StaticResource di_pencil}" Width="30" Height="30"/>
                                             </Button.Content>
