--- a/UserInterface/Views/SettingsView.xaml
+++ b/UserInterface/Views/SettingsView.xaml
@@ -61,14 +61,15 @@
                 Fill="{Binding SavedColor}"/>
             <wpfx:ColorPicker 
               Name="ColorPicker" 
-              Height="30" 
+              Height="70" 
               Grid.Row="2"
               HorizontalAlignment="Right"
               Grid.Column="2"
               DisplayColorAndName="True" 
               Margin="0 0 50 0"   
               SelectedColor="{Binding SelectedColor}"
-              ShowTabHeaders="True">
+              ShowStandardColors="False"
+              ShowTabHeaders="False">
             </wpfx:ColorPicker>
 
             <Rectangle
