--- a/UserInterface/Views/SettingsView.xaml
+++ b/UserInterface/Views/SettingsView.xaml
@@ -60,18 +60,19 @@
                 Width="320"
                 Fill="{Binding SavedColor}"/>
             <wpfx:ColorPicker 
-              Name="ColorPicker" 
-              Height="70" 
-              Grid.Row="2"
-              HorizontalAlignment="Right"
-              Grid.Column="2"
-              DisplayColorAndName="True" 
-              Margin="0 0 50 0"   
-              SelectedColor="{Binding SelectedColor}"
-              ShowStandardColors="False"
-              ShowTabHeaders="False">
+                Name="ColorPicker" 
+                Height="70" 
+                Grid.Row="2"
+                HorizontalAlignment="Right"
+                Grid.Column="2"
+                DisplayColorAndName="True" 
+                Margin="0 0 50 0"   
+                SelectedColor="{Binding SelectedColor}"
+                ShowStandardColors="False"
+                ShowTabHeaders="False"
+                ColorMode="ColorCanvas" >
             </wpfx:ColorPicker>
-
+            
             <Rectangle
                 Height="15"
                 Grid.Column="0"
