--- a/UserInterface/Views/TargetAudienceOverviewView.xaml
+++ b/UserInterface/Views/TargetAudienceOverviewView.xaml
@@ -15,7 +15,7 @@
                 <Grid>
                     <TextBlock Style="{StaticResource Header}" Text="Leeftijdsgroepen"/>
                     <Button 
-         Style="{StaticResource PrimaryButton_S}"
+         Style="{StaticResource SecondaryButton_S}"
          HorizontalAlignment="Right"
          Command="{Binding CreateCommand}"
          Content="Nieuw"/>
