Prep for c001.2 rebuild

--- a/UserInterface/Views/Test/TestTextQuestionView.xaml
+++ b/UserInterface/Views/Test/TestTextQuestionView.xaml
@@ -34,7 +34,7 @@
                  Grid.Row="3" 
                  HorizontalAlignment="Left"
                  Content="Volgende vraag" 
-                 Command="{Binding SaveQuestionCommand}"/>
+                 Command="{Binding AnswerTextQuestionCommand}"/>
             </Grid>
             <Image Grid.Column="1" Source="/UserInterface;component/Assets/Images/test.png"></Image>
         </Grid>
