--- a/UserInterface/Views/Test/TestTargetAudienceView.xaml
+++ b/UserInterface/Views/Test/TestTargetAudienceView.xaml
@@ -30,7 +30,7 @@
                     <TextBlock Style="{DynamicResource Header}" Grid.RowSpan="1" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
                     <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
-                        <ListBox SelectedItem="{Binding SelectedOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
+                        <ListBox SelectedItem="{Binding SelectedTextOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
                     </StackPanel>
 
                     <Button 
