C-001 rebuild + img -> xaml + disable btn

--- a/UserInterface/Views/Test/TestView.xaml
+++ b/UserInterface/Views/Test/TestView.xaml
@@ -12,6 +12,6 @@
         <Views:TestTargetAudienceView Visibility="{Binding ShowTestTargetAudienceView}"/>
         <Views:TestTextQuestionView Visibility="{Binding ShowTestTextQuestionView}" />
         <Views:TestAudiometryQuestionView Visibility="{Binding ShowTestToneAudiometryView}"/>
-
+        <Views:TestExplanationStartAudioView Visibility="{Binding ShowTestExplanationStartAudioView}"/>
     </Grid>
 </UserControl>
