--- a/UserInterface/Views/Test/TestTargetAudienceView.xaml
+++ b/UserInterface/Views/Test/TestTargetAudienceView.xaml
@@ -28,7 +28,7 @@
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Style="{DynamicResource Header}" Grid.RowSpan="1" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
+                    <TextBlock Style="{DynamicResource Header}" Grid.ColumnSpan="2" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
                     <StackPanel Grid.Row="1" Visibility="{Binding ShowQuestionRadioButtons}">
                         <ListBox SelectedItem="{Binding SelectedTextOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
@@ -39,7 +39,8 @@
                          Grid.Row="3" 
                          HorizontalAlignment="Left"
                          Content="Volgende vraag" 
-                         Command="{Binding TargetAudienceSelectedCommand}"/>
+                         Command="{Binding TargetAudienceSelectedCommand}"
+                        IsEnabled="{Binding TargetAudienceBtnEnabled}"/>
                 </Grid>
                 <images:SittingScreen Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </Grid>
